tests/tests/ui/err/token-non-utf8.stderr
error: UTF-8 mode is requested, but the pattern b"\xFF" of variant `::NonUtf8` can match invalid utf8.
       You can disable UTF-8 mode with #[logos(utf8 = false)]
 --> tests/ui/err/token-non-utf8.rs:5:13
  |
5 |     #[token(b"\xFF")]
  |             ^^^^^^^
