tests/tests/ui/err/token-non-utf8.rs
use logos::Logos;

#[derive(Logos)]
enum Token {
    #[token(b"\xFF")]
    NonUtf8,
}

fn main() {}
